--- a/data/manifest.jsonc
+++ b/data/manifest.jsonc
@@ -14,26 +14,22 @@
         { "id": "magnadoodle", "url": "data/scenes/magnadoodle" },
         { "id": "outside", "url": "data/scenes/outside" },
         { "id": "dump", "url": "data/scenes/dump" },
-        { "id": "shroomKingdom", "url": "data/scenes/shroom-kingdom" },
-        { "id": "shroomSewer", "url": "data/scenes/shroom-sewer" }
+        { "id": "shroomKingdom", "url": "data/scenes/shroom-kingdom" }
       ]
     },
-    {
-      "type": "items",
-      "items": [
-        { "id": "mushroom", "url": "data/items/mushroom" }
-      ]
-    },
+    // {
+    //   "type": "items",
+    //   "items": []
+    // },
     {
       "type": "pets",
       "items": [
-        // { "id": "neenya", "url": "data/pets/neenya" },
-        // { "id": "bunchie", "url": "data/pets/bunchie" },
+        { "id": "neenya", "url": "data/pets/neenya" },
+        { "id": "bunchie", "url": "data/pets/bunchie" },
         { "id": "bario", "url": "data/pets/bario" },
-        { "id": "lario", "url": "data/pets/lario" }
-        // { "id": "raccoon", "url": "data/pets/raccoon" },
-        // { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
-        // { "id": "hotdoug", "url": "data/pets/hot-doug" }
+        { "id": "raccoon", "url": "data/pets/raccoon" },
+        { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
+        { "id": "hotdoug", "url": "data/pets/hot-doug" }
       ]
     }
   ]
