--- a/data/scenes/shroom-kingdom/data.jsonc
+++ b/data/scenes/shroom-kingdom/data.jsonc
@@ -1,63 +1,20 @@
 {
   "id": "shroomKingdom",
-  "type":"responsive",
   "floor": {
-    "height": 125.0,
-    "texture": "brick"
+    "height": "300"
   },
-  /* 
-    later platform groups appear on top
-    some values can be values or a range to pick between "valOrRand"
-    "stairs" and "rando" are only types and have their own rules
-  */
-  "platforms":[
-    {
-      "type": "rando",
-      "texture": "brick",
-      "count": 4,
-      "xBuffer": { "left": 64, "right": 64 },
-      "width": [ 64, 192 ],  //valOrRand
-      "height": [ 64, 128 ],  //valOrRand
-      "snap": 64
-    },
-    {
-      "type": "stairs",
-      "texture": "metal",
-      "count": 6,
-      "size": 64,
-      "snap": 64,
-      "x": [ 320, 1600 ],  //valOrRand
-      "stepX": 1, //valOrRand
-      "stepY": [1, 2] //valOrRand
-    }
-  ],
-  "textures":{
-    "brick":{
-      "id":"brick",
-      "imageUrl":"brick.png",
-      "width":32,
-      "height":32,
-      "spriteScale":2
-    },
-    "metal":{
-      "id":"metal",
-      "imageUrl":"metal.png",
-      "width":32,
-      "height":32,
-      "spriteScale":2
-    }
+  "type":"responsive",
+  "cage":{
+    "x":"0",
+    "y":"0",
+    "width":"100%",
+    "height":"100%",
+    "rotation":"0",
+    "floor": "-110"
   },
   "background":{
     "color": "#3D3D3D",
     "imageUrl": "bg.png",
-    "size": [ 545, 545 ],
-    "spriteScale":2,
-    "scale":{
-      // "width":"stretch",
-      "width":"auto",
-      // "height":"stretch",
-      "height":"auto"
-    },
     "styles":{
       "backgroundPosition": "0% 100%",
       "backgroundSize": "1090px 1090px",
